Mudando origem dos dados para o banco PostgreSQL e Criando deleção enviando para o MongoDB

--- a/k8s-ocp-view/src/app/app.component.html
+++ b/k8s-ocp-view/src/app/app.component.html
@@ -20,6 +20,7 @@
     <td>{{ p.id }}</td>
     <td>{{ p.plate }}</td>
     <td>{{ p.speed }}</td>
+    <td><button (click)="delete(p)">Deletar</button></td>
   </tr>
 </table>
 
